# bctui

./: LICENSE  README.md  pyproject.toml
bctui/: __main__.py  app.py  bandcamp.py  cache.py  config.py  style.tcss  subsonic.py  types.py
